--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -110,8 +110,10 @@
     text-align: center;
     margin-bottom: 0;
     padding: 1rem;
+    text-transform: uppercase;
 }
 
 .copy-msg p {
     font-size: 2rem;
+    font-weight: 100;
 }
