--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -1,4 +1,4 @@
-.ColorBox {
+/* .ColorBox {
     width: 20%;
     height: 25%;
     margin: 0 auto;
@@ -7,11 +7,11 @@
     cursor: pointer;
     margin-bottom: -3.5px;
 
-}
+} */
 
-.SingleColorPalette .ColorBox {
+/* .SingleColorPalette .ColorBox {
     height: 50%;
-}
+} */
 
 .go-back {
     background-color: black;
@@ -37,16 +37,16 @@
     text-decoration: none;
 }
 
-.copy-button {
+/* .copy-button {
     opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
     opacity: 1;
     transition: 0.5s;
-}
+} */
 
-.box-content {
+/* .box-content {
     position: absolute;
     width: 100%;
     left: 0px;
@@ -56,8 +56,8 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 12px;
-}
-
+} */
+/* 
 .light-text {
     color: white;
 }
@@ -78,9 +78,9 @@
     text-align: center;
     line-height: 30px;   
     text-transform: uppercase;
-}
+} */
 
-.copy-overlay {
+/* .copy-overlay {
     opacity: 0;
     z-index: 0;
     width: 100%;
@@ -96,8 +96,8 @@
     transform:  scale(50);
     z-index: 10;
     position: absolute;
-}
-
+} */
+/* 
 .copy-msg {
     position: fixed;
     left: 0;
@@ -136,4 +136,4 @@
 .copy-msg p {
     font-size: 2rem;
     font-weight: 100;
-}
+} */
